# course-llm-zoomcamp

./: .gitignore  README.md
module01/: main.ipynb  pyproject.toml  rag_intro.ipynb
module01/homework/: homework01.ipynb  homework01.md
module02/: hybrid_search.ipynb  pyproject.toml  rag-starter.ipynb  rag.ipynb  semantic_search.ipynb
module02/homework/: homework02.ipynb  homework02.md  hw02-03.ipynb  hw02-04.ipynb  hw02-05.ipynb  hw02-06.ipynb
module03/homework/: homework03.ipynb  homework03.md  pyproject.toml
workshops/dlt-cognee/homework/: README.md  main.ipynb  pyproject.toml
workshops/dlt-cognee/homework/db.qdrant/collection/zoomcamp_tagged_data__dlt_loads/: storage.sqlite
workshops/dlt-cognee/homework/db.qdrant/collection/zoomcamp_tagged_data__dlt_pipeline_state/: storage.sqlite
workshops/dlt-cognee/homework/db.qdrant/collection/zoomcamp_tagged_data__dlt_version/: storage.sqlite
workshops/dlt-cognee/homework/db.qdrant/collection/zoomcamp_tagged_data_zoomcamp_data/: storage.sqlite
workshops/rag-agents/: agents.ipynb  agents_script.ipynb  chat_assistant.py  pyproject.toml
workshops/rag-agents/homework/: homework.ipynb  homework.md  weather_server.py
