[project]
name = "module01"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch==8.13.0",
    "ipykernel>=6.29.5",
    "minsearch>=0.0.2",
    "openai>=1.85.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "tiktoken>=0.9.0",
]
