[project]
name = "homework"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.7.1",
    "ipykernel>=6.30.0",
    "ipywidgets>=8.1.7",
    "minsearch>=0.0.4",
    "qdrant-client>=1.15.0",
    "requests>=2.32.4",
    "rouge>=1.0.1",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
]
